# CourseWorkDB

./: .gitmodules
code/: CMakeLists.txt  README.md  main.cpp
code/bl/: CMakeLists.txt
code/bl/inc/: AuthUserSingleton.h  IMatchTransactionFactory.h  ITournamentTransactionFactory.h  TournamentTransactionFactory.h  UserTransactionFactory.h
code/bl/inc/facade/: IFacadeErrorProcessor.h  IMainFacade.h  IMatchFacade.h  ITournamentFacade.h  IUserFacade.h  MainFacade.h  MatchFacade.h  TournamentFacade.h  UserFacade.h
code/bl/inc/transactions/: IMatchTransactionFactory.h  ITournamentTransactionFactory.h  MatchTransactionFactory.h  TournamentTransactionFactory.h  UserTransactionFactory.h
code/bl/src/: AuthUserSingleton.cpp  TournamentTransactionFactory.cpp  UserTransactionFactory.cpp
code/bl/src/facade/: MainFacade.cpp  MatchFacade.cpp  TournamentFacade.cpp  UserFacade.cpp
code/bl/src/transactions/: MatchTransactionFactory.cpp  TournamentTransactionFactory.cpp  UserTransactionFactory.cpp
code/db/: CMakeLists.txt
code/db/inc/public/repositories/: IRepositoryFactory.h  MatchRepository.h  RepositoryFactory.h  TournamentParticipantsRepository.h  TournamentRepository.h  UserRepository.h
code/db/inc/public/repositories/ORM/: IIdentifiable.h  ISearchORM.h  Match.h  Tournament.h  User.h
code/db/inc/public/utility/: BaseDefines.h  NotMandatoryField.h  TableAbstractValue.h
code/db/src/: PostgreSqlAdapter.cpp
code/db/src/repositories/: MatchRepository.cpp  RepositoryFactory.cpp  TournamentParticipantsRepository.cpp  TournamentRepository.cpp  UserRepository.cpp
code/db/src/repositories/roles/: GuestRole.cpp  TournamentLeaderRole.cpp  TournamentParticipantRole.cpp
code/db/src/utility/: PostgreSqlCommandSource.cpp  TableAbstractValue.cpp
code/db/tests/: NotMandatoryFieldTests.cpp  TestPostgreSqlCommandSource.cpp  TestTableAbstractValue.cpp
code/transport/: CMakeLists.txt  Match.h  NotMandatoryField.h  Tournament.h  TournamentParticipants.h
code/ui/: CMakeLists.txt
code/ui/inc/: AuthorizationWindow.h  CdkCoordinator.h  ICoordinator.h
code/ui/inc/windows/: AuthorizationWindow.h  IWindow.h  IWindowsFactory.h  MainMenuWindow.h
code/ui/inc/windows/cdk/: AuthorizationWindow.h  CdkWindowsFactory.h  MainMenuWindow.h  SignUpWindow.h
code/ui/src/: AuthorizationWindow.cpp  CdkCoordinator.cpp  main.cpp
code/ui/src/commonUser/: CommonUserWindowsFactory.cpp
code/ui/src/windows/: AuthorizationWindow.cpp  MainMenuWindow.cpp
code/ui/src/windows/cdk/: AuthorizationWindow.cpp  CdkWindowsFactory.cpp  GuestTournamentWindow.cpp  MainMenuWindow.cpp  SignUpWindow.cpp  TournamentCreationWindow.cpp  UpdateUserWindow.cpp
